--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.24.1",
     "sharp": "^0.33.4"
   },
