--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "clipboard": "^2.0.11",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
