--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
