--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.7.7",
     "clipboard": "^2.0.11",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
