--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.0",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.7",
