--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/reusable/modal/TransactionPin.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/reusable/modal/TransactionPin.jsx", "src/app/dashboard/home/DashboardBalanceCard.jsx"],
   "exclude": ["node_modules"]
 }
